# CustomUAC

./: .gitmodules  README.md
.github/workflows/: tag-build.yml  test-build.yml
installer_script/: uac_setup.iss
src/: CMakeLists.txt
src/Control/: CMakeLists.txt
src/Control/src/: control.manifest  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Control/src/translations/: zh_CN.ts
src/Service/: CMakeLists.txt
src/Service/src/: FileUtils.hpp  Privileges.hpp  ServiceMain.cpp  UACService.manifest  Utils.hpp
src/UACmain/: CMakeLists.txt
src/UACmain/default_qml/: CMakeLists.txt
src/UACmain/default_qml/src/: background.qml  config.ini  default.qrc.in  default_embedded.qrc.in  main.qml
src/UACmain/default_qml/src/translations/: zh_CN.ts  zh_TW.ts
src/UACmain/src/: UACmain.manifest  allowlist.cpp  allowlist.h  applicationengine.cpp  applicationengine.h  dummy.qml  emergencyhandler.cpp  emergencyhandler.h  linkoptions.cpp  main.cpp  securedesktop.cpp  securedesktop.h  settings.cpp  settings.h  uacdata.cpp  uacdata.h  uacparser.cpp  uacparser.h  urlinterceptor.cpp  urlinterceptor.h
src/UACmain/src/translations/: zh_CN.ts  zh_TW.ts
